# katana-kde-workspace

./: CMakeLists.txt  ConfigureChecks.cmake  config-X11.h.cmake  config-workspace.h.cmake  startkde.cmake
kcontrol/dateandtime/: CMakeLists.txt  dtime.cpp  kcm_clock.cpp  kcm_clock.h  kcm_clock_helper.cpp  kcm_clock_helper.h  main.cpp
kcontrol/randr/: CMakeLists.txt  krandr.cpp  krandr.desktop  krandrmodule.cpp  outputconfig.cpp  outputconfig.h  outputconfigbase.ui  randr.desktop  randrconfig.cpp  randrconfig.h  randrcrtc.cpp  randrcrtc.h  randrdisplay.cpp  randrmode.cpp  randrmode.h  randroutput.cpp  randroutput.h  randrscreen.cpp  randrscreen.h
kcontrol/randr/module/: randrmonitor.cpp  randrmonitor.h
kmediaplayer/: CMakeLists.txt  kmediawindow.cpp  kmediawindow.h  main.cpp
kwin/effects/dimscreen/: CMakeLists.txt  dimscreen.cpp  dimscreen.desktop  dimscreen.h  dimscreen.kcfg  dimscreen_config.cpp  dimscreen_config.desktop  dimscreen_config.h  dimscreen_config.ui  dimscreenconfig.kcfgc
kwin/kcmkwin/kwindecoration/: CMakeLists.txt  kwindecoration.cpp  kwindecoration.desktop  kwindecoration.h
libs/plasmagenericshell/: CMakeLists.txt  Messages.sh  backgrounddialog.cpp
plasma/: CMakeLists.txt
plasma/applets/: CMakeLists.txt
plasma/applets/batterymonitor/: Messages.sh  batterymonitor.cpp
plasma/applets/calculator/: Messages.sh  calculator.cpp  calculator.h
plasma/applets/calendar/: CMakeLists.txt  calendar.cpp  calendar.h  plasma-applet-calendar.desktop
plasma/applets/devicenotifier/: Messages.sh  devicenotifier.cpp
plasma/applets/dict/: CMakeLists.txt  dict.cpp  dict.h  plasma-dict-default.desktop
plasma/applets/digital-clock/: CMakeLists.txt  clockConfig.ui  digitalclock.cpp  digitalclock.h  plasma-applet-digitalclock.desktop
plasma/applets/folderview/: CMakeLists.txt  asyncfiletester.cpp  folderview.cpp  folderviewDisplayConfig.ui  iconview.cpp  iconview.h  itemeditor.cpp  itemeditor.h  listview.cpp  listview.h  popupview.cpp  proxymodel.cpp  tooltipwidget.cpp
plasma/applets/icon/: icon.cpp
plasma/applets/keyboard/: keyboard.cpp
plasma/applets/kickoff/: CMakeLists.txt
plasma/applets/kickoff/applet/: applet.cpp
plasma/applets/kickoff/core/: itemhandlers.cpp  itemhandlers.h  krunnermodel.cpp  krunnermodel.h  (+3 more)
plasma/applets/launcher/: CMakeLists.txt  Messages.sh  launcher.cpp  launcher.h  plasma-applet-launcher.desktop
plasma/applets/lockout/: Messages.sh  lockout.cpp  lockout.h
plasma/applets/luna/: CMakeLists.txt  luna.cpp  luna.h
plasma/applets/mixer/: mixer.cpp  mixer.h
plasma/applets/notes/: CMakeLists.txt  notes.cpp  notes.h  plasma-notes-default.desktop
plasma/applets/notifications/: CMakeLists.txt  Messages.sh  applicationswidget.cpp  applicationswidget.h  jobswidget.cpp  jobswidget.h  jobtrackeradaptor.cpp  jobtrackeradaptor.h  notifications.cpp  notificationsadaptor.cpp  notificationsadaptor.h
plasma/applets/pager/: pager.cpp
plasma/applets/panelspacer/: panelspacer.cpp  panelspacer.h
plasma/applets/quicklaunch/: launcher.cpp  launcherdata.cpp  quicklaunch.cpp
plasma/applets/system-monitor/: CMakeLists.txt  plasma-applet-system-monitor.desktop  system-monitor.cpp  system-monitor.h
plasma/applets/systemtray/: CMakeLists.txt  Messages.sh  plasma-applet-systemtray.desktop  systemtray.cpp  systemtray.h
plasma/applets/tasks/: Messages.sh  tasks.cpp  tasks.h
plasma/applets/trash/: CMakeLists.txt  trash.cpp  trash.h
plasma/applets/weather/: Messages.sh  plasma-applet-weather.desktop  weather.cpp  weather.h
plasma/containmentactions/applauncher/: launch.cpp  launch.h
plasma/containmentactions/contextmenu/: CMakeLists.txt  menu.cpp  menu.h
plasma/containments/desktop/: CMakeLists.txt  desktop.cpp  desktop.h
plasma/dataengines/: CMakeLists.txt
plasma/dataengines/dict/: dictengine.cpp
plasma/dataengines/notifications/: notificationsengine.cpp
plasma/dataengines/soliddevice/: devicesignalmapmanager.cpp  devicesignalmapmanager.h  devicesignalmapper.cpp  devicesignalmapper.h  soliddeviceengine.cpp
plasma/design/: wallpaper
plasma/runners/: CMakeLists.txt
plasma/runners/bookmarks/: CMakeLists.txt  bookmarkmatch.cpp  bookmarksrunner.cpp  bookmarksrunner.h  plasma-runner-bookmarks.desktop
plasma/runners/calculator/: CMakeLists.txt  calculatorrunner.cpp  calculatorrunner.h
plasma/runners/kill/: killrunner.cpp  killrunner.h  killrunner_config.cpp
plasma/runners/locations/: locationrunner.cpp  locationrunner.h  plasma-runner-locations.desktop
plasma/runners/places/: CMakeLists.txt  placesrunner.cpp  placesrunner.h
plasma/runners/powerdevil/: PowerDevilRunner.cpp  PowerDevilRunner.h  plasma-runner-powerdevil.desktop
plasma/runners/recentdocuments/: recentdocuments.cpp  recentdocuments.desktop  recentdocuments.h
plasma/runners/services/: plasma-runner-services.desktop  servicerunner.cpp  servicerunner.h
plasma/runners/sessions/: CMakeLists.txt  plasma-runner-sessions.desktop  sessionrunner.cpp  sessionrunner.h
plasma/runners/shell/: CMakeLists.txt  plasma-runner-shell.desktop  shellrunner.cpp  shellrunner.h
plasma/runners/solid/: plasma-runner-solid.desktop  solidrunner.cpp  solidrunner.h
plasma/runners/webshortcuts/: plasma-runner-webshortcuts.desktop  webshortcutrunner.cpp  webshortcutrunner.h
plasma/runners/windowedwidgets/: plasma-runner-windowedwidgets.desktop  windowedwidgetsrunner.cpp  windowedwidgetsrunner.h
plasma/runners/windows/: plasma-runner-windows.desktop  windowsrunner.cpp  windowsrunner.h
plasma/shells/plasma-desktop/: CMakeLists.txt  Messages.sh  desktopcorona.cpp  main.cpp  panelview.cpp  panelview.h  plasmaapp.cpp  plasmaapp.h  shutdowndlg.cpp  shutdowndlg.h
plasma/shells/plasma-windowed/: CMakeLists.txt  singleview.cpp
plasma/toolboxes/: desktoptoolbox.cpp  desktoptoolbox.h  internaltoolbox.h
plasma/wallpapers/: CMakeLists.txt
plasma/wallpapers/image/: CMakeLists.txt  backgrounddelegate.cpp  backgroundlistmodel.cpp  image.cpp  plasma-wallpaper-image.desktop
plasma/wallpapers/potd/: CMakeLists.txt  Messages.sh  plasma-wallpaper-potd.desktop  potd.cpp  potd.h
(+510 files in other folders)
